tests/errors/preprocessor/temporarily_unemployed/define/alphabet/hash.c
// Alphabet testing from (A = 65) to (Z = 90)
#define A 65

void main()
{
    int hash = A;
    printid(hash);
} 